software/sensor/veml7700-esp-idf-main/build/log/idf_py_stdout_output_20200
[1/10] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Users\Stephen\esp\esp-idf\examples\veml7700-esp-idf-main\build\bootloader\esp-idf\esptool_py && C:\Users\Stephen\.espressif\python_env\idf5.1_py3.11_env\Scripts\python.exe C:/Users/Stephen/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/Users/Stephen/esp/esp-idf/examples/veml7700-esp-idf-main/build/bootloader/bootloader.bin"
Bootloader binary size 0x5300 bytes. 0x2d00 bytes (35%) free.
[2/8] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/example_light_measure.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/example_light_measure.c.obj 
ccache C:\Users\Stephen\.espressif\tools\riscv32-esp-elf\esp-12.2.0_20230208\riscv32-esp-elf\bin\riscv32-esp-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.1.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/Stephen/esp/esp-idf/examples/veml7700-esp-idf-main/build/config -IC:/Users/Stephen/esp/esp-idf/examples/veml7700-esp-idf-main/include -IC:/Users/Stephen/esp/esp-idf/components/newlib/platform_include -IC:/Users/Stephen/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/Users/Stephen/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -IC:/Users/Stephen/esp/esp-idf/components/freertos/esp_additions/include/freertos -IC:/Users/Stephen/esp/esp-idf/components/freertos/esp_additions/include -IC:/Users/Stephen/esp/esp-idf/components/freertos/esp_additions/arch/riscv/include -IC:/Users/Stephen/esp/esp-idf/components/esp_hw_support/include -IC:/Users/Stephen/esp/esp-idf/components/esp_hw_support/include/soc -IC:/Users/Stephen/esp/esp-idf/components/esp_hw_support/include/soc/esp32c6 -IC:/Users/Stephen/esp/esp-idf/components/esp_hw_support/port/esp32c6/. -IC:/Users/Stephen/esp/esp-idf/components/esp_hw_support/port/esp32c6/private_include -IC:/Users/Stephen/esp/esp-idf/components/heap/include -IC:/Users/Stephen/esp/esp-idf/components/log/include -IC:/Users/Stephen/esp/esp-idf/components/soc/include -IC:/Users/Stephen/esp/esp-idf/components/soc/esp32c6 -IC:/Users/Stephen/esp/esp-idf/components/soc/esp32c6/include -IC:/Users/Stephen/esp/esp-idf/components/hal/esp32c6/include -IC:/Users/Stephen/esp/esp-idf/components/hal/include -IC:/Users/Stephen/esp/esp-idf/components/hal/platform_port/include -IC:/Users/Stephen/esp/esp-idf/components/esp_rom/include -IC:/Users/Stephen/esp/esp-idf/components/esp_rom/include/esp32c6 -IC:/Users/Stephen/esp/esp-idf/components/esp_rom/esp32c6 -IC:/Users/Stephen/esp/esp-idf/components/esp_common/include -IC:/Users/Stephen/esp/esp-idf/components/esp_system/include -IC:/Users/Stephen/esp/esp-idf/components/esp_system/port/soc -IC:/Users/Stephen/esp/esp-idf/components/esp_system/port/include/riscv -IC:/Users/Stephen/esp/esp-idf/components/esp_system/port/include/private -IC:/Users/Stephen/esp/esp-idf/components/riscv/include -IC:/Users/Stephen/esp/esp-idf/components/lwip/include -IC:/Users/Stephen/esp/esp-idf/components/lwip/include/apps -IC:/Users/Stephen/esp/esp-idf/components/lwip/include/apps/sntp -IC:/Users/Stephen/esp/esp-idf/components/lwip/lwip/src/include -IC:/Users/Stephen/esp/esp-idf/components/lwip/port/include -IC:/Users/Stephen/esp/esp-idf/components/lwip/port/freertos/include -IC:/Users/Stephen/esp/esp-idf/components/lwip/port/esp32xx/include -IC:/Users/Stephen/esp/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/Users/Stephen/esp/esp-idf/components/esp_event/include -IC:/Users/Stephen/esp/esp-idf/examples/veml7700-esp-idf-main/components/esp_idf_lib_helpers -IC:/Users/Stephen/esp/esp-idf/examples/veml7700-esp-idf-main/components/i2cdev -IC:/Users/Stephen/esp/esp-idf/components/driver/include -IC:/Users/Stephen/esp/esp-idf/components/driver/deprecated -IC:/Users/Stephen/esp/esp-idf/components/driver/analog_comparator/include -IC:/Users/Stephen/esp/esp-idf/components/driver/dac/include -IC:/Users/Stephen/esp/esp-idf/components/driver/gpio/include -IC:/Users/Stephen/esp/esp-idf/components/driver/gptimer/include -IC:/Users/Stephen/esp/esp-idf/components/driver/i2c/include -IC:/Users/Stephen/esp/esp-idf/components/driver/i2s/include -IC:/Users/Stephen/esp/esp-idf/components/driver/ledc/include -IC:/Users/Stephen/esp/esp-idf/components/driver/mcpwm/include -IC:/Users/Stephen/esp/esp-idf/components/driver/parlio/include -IC:/Users/Stephen/esp/esp-idf/components/driver/pcnt/include -IC:/Users/Stephen/esp/esp-idf/components/driver/rmt/include -IC:/Users/Stephen/esp/esp-idf/components/driver/sdio_slave/include -IC:/Users/Stephen/esp/esp-idf/components/driver/sdmmc/include -IC:/Users/Stephen/esp/esp-idf/components/driver/sigma_delta/include -IC:/Users/Stephen/esp/esp-idf/components/driver/spi/include -IC:/Users/Stephen/esp/esp-idf/components/driver/temperature_sensor/include -IC:/Users/Stephen/esp/esp-idf/components/driver/touch_sensor/include -IC:/Users/Stephen/esp/esp-idf/components/driver/twai/include -IC:/Users/Stephen/esp/esp-idf/components/driver/uart/include -IC:/Users/Stephen/esp/esp-idf/components/driver/usb_serial_jtag/include -IC:/Users/Stephen/esp/esp-idf/components/esp_pm/include -IC:/Users/Stephen/esp/esp-idf/components/esp_ringbuf/include -march=rv32imac_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fmacro-prefix-map=C:/Users/Stephen/esp/esp-idf/examples/veml7700-esp-idf-main=. -fmacro-prefix-map=C:/Users/Stephen/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/example_light_measure.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\example_light_measure.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/example_light_measure.c.obj -c C:/Users/Stephen/esp/esp-idf/examples/veml7700-esp-idf-main/main/example_light_measure.c
C:/Users/Stephen/esp/esp-idf/examples/veml7700-esp-idf-main/main/example_light_measure.c: In function 'select_channel':
C:/Users/Stephen/esp/esp-idf/examples/veml7700-esp-idf-main/main/example_light_measure.c:30:79: error: 'ACK_CHECK_EN' undeclared (first use in this function)
   30 |     i2c_master_write_byte(cmd_handle, (TCA9548_ADDR << 1) | I2C_MASTER_WRITE, ACK_CHECK_EN); // why does this shift TCA9548 left one?
      |                                                                               ^~~~~~~~~~~~
C:/Users/Stephen/esp/esp-idf/examples/veml7700-esp-idf-main/main/example_light_measure.c:30:79: note: each undeclared identifier is reported only once for each function it appears in
C:/Users/Stephen/esp/esp-idf/examples/veml7700-esp-idf-main/main/example_light_measure.c:33:61: error: 'portTICK_RATE_MS' undeclared (first use in this function); did you mean 'portTICK_PERIOD_MS'?
   33 |     i2c_master_cmd_begin(I2C_MASTER_NUM, cmd_handle, 1000 / portTICK_RATE_MS);
      |                                                             ^~~~~~~~~~~~~~~~
      |                                                             portTICK_PERIOD_MS
C:/Users/Stephen/esp/esp-idf/examples/veml7700-esp-idf-main/main/example_light_measure.c: In function 'app_main':
C:/Users/Stephen/esp/esp-idf/examples/veml7700-esp-idf-main/main/example_light_measure.c:58:95: warning: missing terminating " character
   58 |         printf("Sensor 2 (Channel 2) - White: %0.4f lux, %0.4f fc\n", lux_white_2, fc_white_2)");
      |                                                                                               ^
C:/Users/Stephen/esp/esp-idf/examples/veml7700-esp-idf-main/main/example_light_measure.c:58:95: error: missing terminating " character
   58 |         printf("Sensor 2 (Channel 2) - White: %0.4f lux, %0.4f fc\n", lux_white_2, fc_white_2)");
      |                                                                                               ^~~
C:/Users/Stephen/esp/esp-idf/examples/veml7700-esp-idf-main/main/example_light_measure.c:58:95: error: expected ';' before '}' token
   58 |         printf("Sensor 2 (Channel 2) - White: %0.4f lux, %0.4f fc\n", lux_white_2, fc_white_2)");
      |                                                                                               ^
      |                                                                                               ;
   59 |     }
      |     ~                                                                                          
ninja: build stopped: subcommand failed.
